--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h1>Hello!</h1>
             </div>
             <div class="photo_round">
-                <img src="/src/img/Photo.png" alt="Photo">
+                <img src="./img/Photo.png" alt="Photo">
             </div>
             <h2>About me</h2>
             <h3>Artemy Akhmadeev <br> I strive to find new knowledge before changing my occupation, as I am not sure that knowledge at the moment will be enough for me.</h3>
@@ -65,7 +65,7 @@
         <div class="footer_text"><a href="https://github.com/plasticine17">Gitehub </a> <br> 2022 
         </div>
         <a class="rs-ison" href="https://rs.school/js/">
-            <img width="100" src="/src/icons/rs_school_js.svg" alt="RS school icon">
+            <img width="100" src="./img/rs_school_js.svg" alt="RS school icon">
 
         </a>  
     </footer>
